tried to fix on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,13 @@ h1, .h1 {
 	color: #fff;
 	margin-top: 194px;
 	margin-bottom: 6px;
+	line-height: 38px;
+}
+
+@media all and (max-width: 768px) {
+	h1 {
+		margin-top: 90px;
+	}
 }
 
 h3, .h3 {
@@ -59,6 +66,10 @@ a {
 	font-size: 12px;
 	letter-spacing: 1px;
 	color: #979797;
+}
+
+a, a:visited, a:focus {
+  text-decoration: none;
 }
 
 a:hover {
@@ -104,14 +115,27 @@ a:hover {
 	width: 100%;
 	bottom: 0;
 	position: fixed;
+	z-index: 11;
 }
 
 ul {
 	list-style: none;
 	margin: 0;
+	padding: 0;
 }
 
 li {
 	display: inline;
 	margin-right: 25px;
+}
+
+.phone {
+	position: absolute;
+    right: 0;
+    top: 30px;
+    z-index: 10;
+}
+
+.home-text {
+	z-index: 9;
 }
